fixed spacing

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #chatBox{
-    height: 400px;
+    height: 433px;
     width: auto;
     border: 3px solid rgb(194, 194, 194);
     padding: 3px;
@@ -37,6 +37,7 @@ input{
     margin: 3px !important;
 }
 
-/* the id from above will lighten the color and can add teh timestamp for it, 
-then could use the media div to populate a random picture of a superhero or sci-fi 
-or other fantasy character as the img */
+#headerDiv,
+#populationDiv {
+    margin: 3px !important;
+}
